# tfkitty

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: test.yml
include/: dt.hpp  init.hpp  server_plugin.hpp  ssdk_dt.hpp
kitty/: kitty.sln
kitty/kittytoolscs/: Program.cs  TableWrapper.cs  kitty.csproj
patched_bins/: default.xex
plugin/: xmake.lua
plugin/include/: mem.hpp  net.hpp  ssdk_tier0.hpp
plugin/src/: dt.cpp  netstuff.cpp  plugin.cpp
src/: dt.cpp  mem.cpp  plugin.cpp
